changed things around so agent and env compile libaries, experiment can use library and can use code from agent and env

--- a/stacks/reinforcement_learning/rl_env/CMakeLists.txt
+++ b/stacks/reinforcement_learning/rl_env/CMakeLists.txt
@@ -30,8 +30,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #target_link_libraries(example ${PROJECT_NAME})
 
 
-rosbuild_add_executable(env
-  src/env.cpp
+rosbuild_add_library(envlib
   src/Env/tworooms.cc
   src/Env/taxi.cc
   src/Env/MountainCar.cc
@@ -43,3 +42,9 @@ rosbuild_add_executable(env
   src/Env/gridworld.cc
   src/Env/stocks.cc
 )
+
+rosbuild_add_executable(env
+  src/env.cpp
+)
+
+target_link_libraries(env envlib)
