--- a/rl_msgs/package.xml
+++ b/rl_msgs/package.xml
@@ -11,7 +11,7 @@
   <author email="patriotsfan@gmail.com">Todd Hester</author>
   <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
 
-  <builtool_depend>catkin</builtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
