--- a/rl_env/CMakeLists.txt
+++ b/rl_env/CMakeLists.txt
@@ -1,36 +1,20 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
+cmake_minimum_required(VERSION 2.8.3)
+project(rl_env)
+find_package(catkin REQUIRED COMPONENTS rl_common rl_msgs roscpp std_msgs tf)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+catkin_package(
+  CATKIN_DEPENDS rl_common rl_msgs roscpp std_msgs tf
+  INCLUDE_DIRS include
+  LIBRARIES envlib
+)
 
-rosbuild_init()
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
+)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-#uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
-
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-
-
-rosbuild_add_library(envlib
+add_library(envlib
   src/Env/tworooms.cc
   src/Env/taxi.cc
   src/Env/MountainCar.cc
@@ -44,8 +28,22 @@ rosbuild_add_library(envlib
   src/Env/LightWorld.cc
 )
 
-rosbuild_add_executable(env
+add_executable(env
   src/env.cpp
 )
+target_link_libraries(env 
+  envlib
+  ${catkin_LIBRARIES}
+)
 
-target_link_libraries(env envlib)
+# install targets
+install (DIRECTORY include/rl_env/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+
+install (TARGETS
+  env
+  envlib
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
